# Soil-Freeze-Thaw-Reference

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  environment.yml  pyproject.toml
configs/: config.example.yaml  site_metadata.example.csv
documents/manuals/: soil_temperature_qaqc_design.md
src/softer/: __init__.py  cli.py  config.py  metadata.py  pipeline.py  sensors.py
src/softer/ancillary/: __init__.py  era5.py  ims_snow.py  soil_grids.py
src/softer/io/: __init__.py  schema.py
src/softer/io/adapters/: __init__.py  base.py  cs616.py  hydraprobe.py  teros12.py
src/softer/model/: __init__.py  filtering.py  fit.py  pooling.py  sfcc.py  uncertainty.py
src/softer/package/: __init__.py  metadata.py  netcdf.py
src/softer/postprocess/: __init__.py  classification.py  probability.py
src/softer/preprocess/: __init__.py  binning.py  coverage.py  cycles.py  permittivity.py  quality_control.py  resample.py
tests/: test_config_metadata.py  test_coverage.py  test_cycles.py  test_quality_control.py
